k3s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dragon-univ
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rubyjeenkim/dragon-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dragon-univ
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
